--- a/classes/cs546/pa2/index.html
+++ b/classes/cs546/pa2/index.html
@@ -69,7 +69,7 @@
     </tr>
     <tr>
       <td colspan="3"><div id="containerYZ"></div></td>
-      <td colspan="3"><div id="containerPr"></div></td>
+      <td colspan="3"><div id="containerIP"></div></td>
     </tr>
   </table>
   
