--- a/classes/cs546/pa2/index.html
+++ b/classes/cs546/pa2/index.html
@@ -43,6 +43,8 @@
     <option value="Wrench">Wrench (6114 lines)</option>
     <option value="Zeppelin">Zeppelin (5083 lines)</option>
   </select>
+  &nbsp;
+  (more lines result in slower load times)
 
   <hr>
 
